--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.4.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwind-merge": "^3.4.0"
   },
