--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.4.0",
     "react-signature-canvas": "^1.1.0-alpha.2",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
